force-app/main/default/objects/MUSW__Permit_Bond__c/MUSW__Permit_Bond__c.object-meta.xml
<CustomObject>
    <label>Permit Bond</label>
    <nameField>
        <displayFormat>PB-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permit Bonds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>