force-app/main/default/objects/MUSW__Permit_Bond__c/fields/MUSW__Bond__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Bond__c</fullName>
    <label>Bond</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Bond__c.MUSW__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Bond__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permit_Bonds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>