force-app/main/default/objects/MUSW__Permit_Bond__c/fields/MUSW__Permit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit__c</fullName>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Bonds</relationshipLabel>
    <relationshipName>Permit_Bonds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>