force-app/main/default/objects/MUSW__Permit_Bond__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <formula>MUSW__Bond__r.RecordType.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>