force-app/main/default/objects/MUSW__Permit_Bond__c/validationRules/MUSW__Amount_Less_Then_Bond_Available_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Amount_Less_Then_Bond_Available_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISCHANGED( MUSW__Bond__c ) || ISNEW(), 
MUSW__Amount__c &gt;  MUSW__Bond__r.MUSW__Available_Amount__c,
MUSW__Amount__c &gt;  MUSW__Bond__r.MUSW__Available_Amount__c + PRIORVALUE(MUSW__Amount__c))</errorConditionFormula>
    <errorDisplayField>MUSW__Amount__c</errorDisplayField>
    <errorMessage>The amount applied can not be greater than the bond&apos;s available amount.</errorMessage>
</ValidationRule>