force-app/main/default/objects/MUSW__Permit_Bond__c/validationRules/MUSW__Amount_Less_Then_Permit_Required_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Amount_Less_Then_Permit_Required_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISCHANGED( MUSW__Permit__c ) || ISNEW(), 
MUSW__Amount__c &gt; MUSW__Permit__r.MUSW__Required_Bond_Amount__c - MUSW__Permit__r.MUSW__Bond_Coverage_Amount__c, 
MUSW__Amount__c &gt; MUSW__Permit__r.MUSW__Required_Bond_Amount__c - MUSW__Permit__r.MUSW__Bond_Coverage_Amount__c + PRIORVALUE(MUSW__Amount__c))</errorConditionFormula>
    <errorDisplayField>MUSW__Amount__c</errorDisplayField>
    <errorMessage>The amount applied can not be greater than the permit&apos;s remaining coverage amount.</errorMessage>
</ValidationRule>